# sg-engine

./: .gitignore  AssimpArchive.7z  CMakeLists.txt  README.md  imgui.ini  learnOpenGLgettingStarted.slnx  learnOpenGLgettingStarted.vcxproj  learnOpenGLgettingStarted.vcxproj.filters  link.txt
assets/descriptors/basic_shapes/: DefaultGrid.json
assets/descriptors/materials/: BaseMaterial.json  DefaultMaterial.json
assets/descriptors/shaders/: LitShader.json  base.json
assets/raw/shaders/: base.frag  gouraud.vert  textured.frag
assets/raw/shaders/fragment/: LitShader.frag
assets/raw/shaders/vertex/: LitShader.vert
external_src/: glad.c
include/: Camera.h  Material.h  Shapes.h  object.h  shader.h  texture.h
include/Core/: GLFW_Context.cpp  GLFW_Context.h  GUI.cpp  GUI.h  Log.h
include/Core/AssetPipeline/: AssetManager.cpp  AssetManager.h
include/Core/GUI/: GUI.cpp  GUI.h  GUI_PropertyHelper.cpp  GUI_PropertyHelper.h  GUI_SceneEditor.cpp  GUI_SceneEditor.h
include/Core/Input/: InputManager.cpp  InputManager.h
include/Core/Interfaces/: MemoryManaged.h  Renderable.h
include/Core/Objects/: GObject.cpp  GObject.h  Light.h
include/Core/Objects/Components/: CDirectLight.cpp  CDirectLight.h  Component.h  Mesh.cpp  Mesh.h  Property.h  StaticMesh.cpp  StaticMesh.h  Transform.cpp  Transform.h
include/Data/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h
include/Scene/: Scene.cpp  Scene.h
include/Utility/: DataTypes.h  JsonParser.cpp  JsonParser.h  ObjectFactory.cpp  ObjectFactory.h  Shapes.cpp
shaders/: gouraud.frag  gouraud.vert  textured.frag  textured.fs  textured.vert  textured.vs
src/: Camera.cpp  Material.cpp  Shapes.cpp  log.cpp  main.cpp  object.cpp  shader.cpp  texture.cpp
